--- a/day2hw.html
+++ b/day2hw.html
@@ -10,7 +10,7 @@
     border: 3px solid #4b5563;      
     border-radius:50px;            
     padding: 50px;                  
-    margin: 10px ;              
+    margin: 50px 200px 350px 200px ;              
     height: 400px;                  
     width: auto;                    
     max-width: 350px;               
@@ -26,11 +26,11 @@
   }
 
   .product-card h2 {
-    margin: 10px 0;                 
+    margin: 10px ;                 
   }
 
   .product-card p {
-    margin: 5px 0;
+    margin: 5px ;
   }
 </style>
 </head>
