--- a/day3hw.html
+++ b/day3hw.html
@@ -21,18 +21,23 @@ p{text-align: center;
 letter-spacing: 3px ;
 word-spacing: 5px;}
 table,th,td {
+  margin: auto;
     border-collapse: collapse;
     border: 2px solid brown;
     width: 60%;
     text-align: center;
     vertical-align: center;}
-    a:hover{ text-decoration: none;
-    color: hotpink;}
-     body{background-image :url("https://i.pinimg.com/236x/78/c0/74/78c074c8f4c30dd428eed8269e5d73ee.jpg");
+    a{text-align:center;
+      text-decoration: none;
+    }
+    a:hover{ 
+     color: hotpink;
+     text-align: center;}
+     body{background-image :url("https://thumbs.dreamstime.com/b/empty-marble-table-top-blurred-store-bokeh-light-backgrou-background-mock-up-display-product-72040619.jpg?w=768");
     ;
      background-attachment: scroll;
     background-position: 50%;
-    background-repeat: no-repeat;
+    background-repeat: repeat-y ;
     background-size: cover;}
     </style>
 </head>
@@ -59,6 +64,6 @@ table,th,td {
          <th>449</th>
         </tr>
     </table>
-    <a href="https://paragonrestaurant.in/">click here</a>
+    <a href="https://paragonrestaurant.in/">Other items</a>
 </body>
 </html>
