--- a/day4cw.html
+++ b/day4cw.html
@@ -17,8 +17,8 @@
         background: #f5f5f5;
         padding: 20px;
         border-radius: 8px;
-        position: relative; /* for absolute-positioned element */
-        overflow: auto; /* scrollable if content overflows */
+        position: relative; 
+        overflow: auto; 
         min-height: 150px;
     }
 
@@ -30,7 +30,7 @@
         border-radius: 5px;
     }
 
-    /* Decorative element */
+    
     .badge {
         position: absolute;
         top: 10px;
